--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,11 +2,23 @@
 	color:grey
 }
 .navbar {
-	margin-bottom:30px;
+	margin:30px;
 }
 .btn-primary {
-	margin-top: 10px;
+	margin: 10px;
 }
 .card {
-	margin-bottom:10px;
+	margin:10px;
+}
+
+.gen-note {
+	margin:10px;
+}
+
+input {
+	margin:10px;
+}
+
+textarea {
+	margin:10px;
 }
